# embedded_jsonl_db_engine

./: README.md  ai-coder-docs.md  pyproject.toml  run-tests.sh
.github/workflows/: publish.yml
embedded_jsonl_db_engine/: blobs.py  database.py  fastregex.py  index.py  progress.py  query.py  schema.py  storage.py  taxonomy.py  utils.py
embedded_jsonl_db_engine.egg-info/: PKG-INFO
examples/: quick_start.py  schema_migration_on_the_fly.py  taxonomy_quickstart.py
scripts/: release.sh
tests/: test_corruption.py  test_more.py  test_open.py  test_performance.py  test_query.py
