[project]
name = "embedded_jsonl_db_engine"
version = "0.1.0"
description = "Embedded JSONL DB with strict schema, in-file header (schema+taxonomies), in-memory indexes, and fast regex queries."
authors = [{ name = "Mykola Rudenko" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
ijson = ["ijson"]
dev = ["mypy", "ruff", "pytest", "pytest-cov"]

[tool.ruff]
line-length = 100
